
This is a special edition. Version is called "X" (actually is 10.10)

Added Docker support
Added new compiled versions: Ubuntu and Fedora
Added screen previews of directories and compressed files
Added flash support on screen previews
Added ZX Desktop icons for TSConf, Baseconf
Added show current AY Player song playing on console <-- TODO fix this description
Added PCW colour modes
Added Playlist to AY Player
Added another toy ZXLife to a new menu Procrastinate
Added compilation os release info, running os info
Added rom file selection for any machine you select, rom file is saved on configuration
Added Ascii Table window

Improved Text Adventure features:
- Added location description texto to image, using AI <-- TODO fix this description
- Added configuration setting for char filter
- Added configuration settings for Text Adventure Map: follow, show unvisited, show unconnected, show objects, show pictures, zoom level
- Added export draw strings to external file (txt, asm, c or pas)
- Preserve zoom level on Text Adventure Map when loading games
- Added GAC support for Text Adventure Map
- Added GAC support for Debug Adventure (cpu view 8) supporting:
  - Connections table
  - Dictionary
  - Objects
  - Verbs
  - Adverbs
  - Locations
  - Messages

Improved ZX Vision
- Allow to render only changed pixels (so it speeds up render). Internal flag: dirty_user_must_draw_contents
- Added more utf-8 characters (ï)
- Added action to put windows in cascade
- Process switcher can be set to immutable, so massive actions on menu Windows, like minimize all, cascade, etc, don't affect it
- Allow to use your own charset file on ZX Vision
- Allow to get charset from a game and use as your own charset file on ZX Vision

Improved ZX Desktop
- When switching to full screen and disable ZX Desktop, windows are restored after disabling full screen
- Allow to disable border and footer when switching to full screen


Improved ZX Spectrum Next emulation:
- Allow to boot NextZXOS v2.07l