@@ -9,11 +9,15 @@ Added flash support on screen previews
 Added ZX Desktop icons for TSConf, Baseconf
 Added show current AY Player song playing on console <-- TODO fix this description
 Added PCW colour modes
-Added Playlist to AY Player
 Added another toy ZXLife to a new menu Procrastinate
 Added compilation os release info, running os info
 Added rom file selection for any machine you select, rom file is saved on configuration
 Added Ascii Table window
+
+Improved AY Player:
+- Added playlist
+- Added shuffle mode
+- Added silence detection
 
 Improved Text Adventure features:
 - Added location description texto to image, using AI <-- TODO fix this description
